--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
 
         <!-- The JavaScript -->
         <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script>
-		<script type="text/javascript" src="jquery.easing.1.3.js"></script>
+		<script type="text/javascript" async src="jquery.easing.1.3.js"></script>
         <script type="text/javascript">
             $(function() {
 				/**
