--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
       <title>CTC-A</title>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-        <meta name="description" content="Slide Down Box Menu with jQuery and CSS3" />
+        <meta name="description" content="CTC Athletics" />
         <meta name="keywords" content="Athletics, ctc, jackson, sports, menuctc, charater, counts, dalton, vann"/>
       <link rel='stylesheet prefetch' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/3.0.2/css/font-awesome.min.css'>
 		<link rel="shortcut icon" href="../favicon.ico" type="image/x-icon"/>
