--- a/apparel.html
+++ b/apparel.html
@@ -215,7 +215,7 @@
   </br>
 
   <!-- The JavaScript -->
-  <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script>
+  <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script>
   <script type="text/javascript" src="jquery.easing.1.3.js"></script>
   <script type="text/javascript">
     $(function() {
