--- a/registration.html
+++ b/registration.html
@@ -193,26 +193,27 @@
   </br></br></br></br>
 <p></p>
   <div class="contentM">
+	  
 <img src="images/b-ball.png" class="th">
 
 
 <p style="text-align:center;">
-<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfQyDoEnvukcAexoruHCVrN32hHZ5X9c7MywiEvFSUoHtGuug/viewform?embedded=true" id="b-ball" class="team1" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
+<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfQyDoEnvukcAexoruHCVrN32hHZ5X9c7MywiEvFSUoHtGuug/viewform?embedded=true" id="b-ball" class="team" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
 </br></br>
 
-<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSc9dfivbZBf3JG1igTy2aRrQL5IiIyTIOr2A0skmHutMduDkA/viewform?embedded=true" frameborder="0" marginheight="0" marginwidth="0" class="team1">Loading...</iframe>
+<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSc9dfivbZBf3JG1igTy2aRrQL5IiIyTIOr2A0skmHutMduDkA/viewform?embedded=true" frameborder="0" marginheight="0" marginwidth="0" class="team">Loading...</iframe>
 </br></br>
 <img src="images/tr.png" class="th">
-<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSeTmliDCa9DMtMvSTkSS_bV0psuN7vuD5zOiH58lvTxFTQO2A/viewform?embedded=true" id="track" class="team1" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
+<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSeTmliDCa9DMtMvSTkSS_bV0psuN7vuD5zOiH58lvTxFTQO2A/viewform?embedded=true" id="track" class="team" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
 </br></br>
 
-<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfrDP2AX5UPMmNKCD03zdnwg-qr-oz9MSBD_j92okimkwgRPA/viewform?embedded=true" class="team1" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
+<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfrDP2AX5UPMmNKCD03zdnwg-qr-oz9MSBD_j92okimkwgRPA/viewform?embedded=true" class="team" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
 </br></br>
 <img src="images/flagfootball.png" class="th">
-<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdPIZeV3BGldg8-3SBnfZRk1b9zqI2_Z_p8De243uaINBsgrg/viewform?embedded=true" id="football"class="team1"  frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
+<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdPIZeV3BGldg8-3SBnfZRk1b9zqI2_Z_p8De243uaINBsgrg/viewform?embedded=true" id="football"class="team"  frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
 </br></br>
 
-<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSer6QSXiCYG0R5UzukKi5i0TLLG44EVbxCXRDdGoC3jbRjbNg/viewform?embedded=true" class="team1" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
+<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSer6QSXiCYG0R5UzukKi5i0TLLG44EVbxCXRDdGoC3jbRjbNg/viewform?embedded=true" class="team" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
   
 </p>
 
