--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
 <iframe src="https://cloudgames.com/games/html5/airplane-battle-new-en-s-iga-cloud/index.html?pub=10" name="cloudgames-com" width="40%" height="551" frameborder="0" scrolling="no"></iframe>
 <iframe src="https://cloudgames.com/games/html5/neon-battle-tank-new-en-s-iga-cloud/index.html?pub=10" name="cloudgames-com" width="40%" height="551" frameborder="0" scrolling="no"></iframe>
 </br>
-<p>Created by M.Mancini & S.Dew</p>
+<p>Created by , S.Dew, M.Mancini, & Students of the <a href="https://www.attheco.com/devcatalyst/">Dev Catalyst Program</a></p>
   </div> <!-- content div -->
 
 </br>
