--- a/mission.html
+++ b/mission.html
@@ -262,7 +262,7 @@
    </br>
   <h2 class="mis">Instructional Development</h2>
   
- <p class="mis">This includes boys and girls in 1-3 grade. It has summer camps in June and July to teach basic skills and techniques. It also has basketball and boys flag football. It involves high school and college students as mentors and instructors.<p>
+ <p class="mis"> Instructional development is available for boys and girls grade 1-3 it is designed to teach basic skills and technique with focus on character development. It has summer camps in June and July to teach basic skills and techniques. It has grils and boys basketball and boys flag football. It involves high school and college students as mentors and instructors.<p>
  </br>
   <h2 class="mis">Impact to Our Community</h2>
   
