--- a/mission.html
+++ b/mission.html
@@ -228,11 +228,12 @@
 </br>
 
 <h2 class="mis">Youth Sports Camps</h2>
-<p class="mis">Summer Youth Sports Programs for basketball and football are held during June and July. They involve both boys and girls from grades 4-6, and are instructional tools that allow skill development and technique training. They involve high school and college students as mentors and instructors.</p>
+<p class="mis">Youth sports camps are available for elementary athletes. Fundamentals, skills development, and character building are the key areas of focus for these camps. 
+</p>
     </br>
 <h2 class="mis">CTC Athletics Basketball Leagues</h2>
 
-<p class="mis">Basketball Leagues include boys and girls in 4-6 grade. High school students keep score and referee while college students are used as assistant coaches and referees. It utilizes. There is competition among school teams.</p>
+<p class="mis">Basketball Leagues include boys and girls in 4-6 grade. High school students keep score and referee while college students are used as assistant coaches and referees. There is competition among school teams.</p>
 </br>
 <li>Winter session--November through February</li>
 </br>
@@ -249,14 +250,14 @@
 
 <h2 class="mis">CTC Athletics Track and Field</h2>
 
-<p class="mis">Track and Field includes competition among school teams and is an instructional guide towards skill development and technique training among its participants. It allows 4-6 grade boys and girl to play and it involves high school and college students.</p>
+<p class="mis">Track and Field includes competition among school teams and is an instructional guide towards skill development and technique training among its participants. It allows 4-6 grade boys and girls to compete and it involves high school and college students.</p>
 </br>
 <li>Spring session--March through May</li>
 </br>
 
 <h2 class="mis">CTC Athletics Flag Football</h2>
 
-<p class="mis">Flag Football includes an instructional enviornment in which encourages skill development and technique training. It covers the fundamentals of football and provides competition among school teams. Its participants are boys from grades 4-6. </p>
+<p class="mis">Flag Football includes an instructional enviornment which encourages skill development and technique training. It covers the fundamentals of football and provides competition among school teams. Its participants are boys from grades 4-6. </p>
  </br>
 <li>Fall session--August through October</li>
    </br>
@@ -294,7 +295,7 @@
 
 
 
-
+<!-- old text youth sports--Summer Youth Sports Programs for basketball and football are held during June and July. They involve both boys and girls from grades 4-6, and are instructional tools that allow skill development and technique training. They involve high school and college students as mentors and instructors.-->
 
 
 
